Now using gradle/actions/setup-gradle@v3 (#646)
* Now using gradle/actions/setup-gradle@v3
* gradle-8.8
* Fixed build warnings